# ESP32-OTAdrive-Examples

./: README.md
01-Blinker/: README.md  platformio.ini
01-Blinker/src/: main.cpp
01-Simple FOTA/Arduino IDE/: simple_fota.ino
01-Simple_FOTA/: README.md
01-Simple_FOTA/ESP-IDF/simple_fota/components/otadrive_esp/: CMakeLists.txt  Kconfig
01-Simple_FOTA/ESP-IDF/simple_fota/components/otadrive_esp/include/: otadrive_esp.h  otd_cert.h  otd_common.h  otd_privates.h
01-Simple_FOTA/ESP-IDF/simple_fota/components/otadrive_esp/src/: conf.c  http.c  misc.c  otadrive_esp.c
02-Simple Config/: README.md
02-Simple Config/Arduino PIO/: platformio.ini
02-VersionInjection/: README.md
02-VersionInjection/src/: main.cpp
03-GetConfiguration/: README.md  platformio.ini
03-GetConfiguration/src/: main.cpp
03-JSON Config/Arduino IDE/: json_config.ino
04-GetConfiguration-SSL/: README.md  platformio.ini
04-GetConfiguration-SSL/src/: main.cpp
04-Simple Resources/Arduino IDE/: simple_resource.ino
05-HTML & Images OTA/: README.md
05-ProgressBar/src/: main.cpp
06-ProgressBar OTA/: README.md
06-SPIFFS OTA/: platformio.ini
06-SPIFFS OTA/src/: main.cpp
07-OfficialLibraryGetConfiguration/: platformio.ini
07-OfficialLibraryGetConfiguration/src/: main.cpp
07-SSL/: README.md
08-LCD SimpleOTA/src/: main.cpp
08-ProgressBar/: README.md  platformio.ini
10-ESP32 Simple Development Board/: platformio.ini
11-Bootstrap On ESP32/: platformio.ini
13-ESP32 SIM800 OTA Upgrade/: platformio.ini
14-ESP32 TTGO OTA/: platformio.ini
14-ESP32 TTGO OTA/src/: main.cpp
(+62 files in other folders)
